<resources>
    <string name="app_name">Fresh Direct</string>
    <string name="open">Welcome</string>
    <string name="qoute">Fresh.Fast.Tasty</string>
    <string name="key2">Log In</string>
    <string name="key1">Sign Up</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="User_name">User Name</string>
    <string name="email">Email</string>
    <string name="des">Let us know what you prefer??</string>
</resources>
