<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/c"
    android:orientation="vertical"
    tools:context="com.example.kalani.instacart.welcome">

    <LinearLayout

        android:id="@+id/ll"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/tra"
        android:orientation="vertical"
        tools:ignore="InvalidId">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/open"
            android:textColor="@android:color/background_dark"
            android:textSize="60sp"
            android:textStyle="bold"
            tools:text="@string/open" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="cursive"
            android:text="@string/qoute"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_light"
            android:textSize="30sp"
            android:textStyle="italic" />


        <Button
            android:id="@+id/buttonlog"
            android:layout_width="80dp"

            android:layout_height="wrap_content"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonstyle2"

            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/key2"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/buttonsign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"

            android:layout_marginTop="-45dp"

            android:background="@drawable/buttonstyle"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/key1"
            android:textColor="@android:color/background_light" />
    </LinearLayout>

</LinearLayout>


