<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kalani.instacart.login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/q"
        android:orientation="vertical"
        android:paddingTop="100dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/textstyle"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textColorHint="#000000"
            android:textSize="18sp" />

        <EditText
            android:layout_width="307dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/textstyle"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#000000"
            android:textSize="18sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/buttonclicked"
            android:text="@string/key2"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/v"
            android:orientation="vertical"></LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
